# LinuxWSL2CmakeProject

./: .gitignore  test.py
Cpp/: CMakeLists.txt  main.cc
Cpp/C/: main.c
Cpp/Class/: CallTest.cc  posixApiCall.cc  posixApiCall.h
Cpp/Class/inc/: CallTest.h  debugTracer.h
Cpp/Class/src/: CallTest.cc  debugTracer.cc  posixApiCall.cc
Cpp/TestFunction/: testCode.h
Julia/: Command.jl
Lua/: xmake.lua
Lua/hello/: xmake.lua
Python/: RadioSwFormater.py  VisbyBuild.py  dbFormat.py  main.py
Shell/: ShellStudy.sh
